AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = rshell
rshell_SOURCES = src/main.cpp src/lib/client.hh src/lib/server.hh
rshell_CPPFLAGS = -pedantic -std=c++17 -pthread -Wall -Wextra -Wformat=2 -Wlogical-op -Wmissing-include-dirs -Wredundant-decls -Wsign-conversion -Wstrict-overflow=2 -Wundef -Wnull-dereference -Wuninitialized -Walloca  -Wcast-qual
